[gd_scene load_steps=3 format=3 uid="uid://cusb8ua2e11wl"]

[ext_resource type="Script" uid="uid://c3nvhwq51puxa" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://cmd84r45d7iu1" path="res://scenes/editor_ui.tscn" id="2_0wfyh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="MainCamera" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="AchievementContainer" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="EditorUI" parent="." instance=ExtResource("2_0wfyh")]
